--- a/index-2.html
+++ b/index-2.html
@@ -274,72 +274,87 @@
                 </div>
             </div>
         </div>
-        <div class="wpo-service-wrap">
+
+        <!-- wpo-room-area-start -->
+        <div class="wpo-room-area-s2 section-padding pt-0">
             <div class="container-fluid">
-                <div class="row align-items-center">
-                    <div class="col-xl-12 col-12">
-                        <div class="wpo-service-items wpo-service-active owl-carousel">
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"><img src="assets/images/service/img-1.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Hiking & Trekking</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"><img src="assets/images/service/img-2.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">2022 Travel Sale</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"><img src="assets/images/service/img-3.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Women-only tours</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"> <img src="assets/images/service/img-4.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Spring into Travel Sale</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"> <img src="assets/images/service/img-5.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Deals of The Week</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"><img src="assets/images/service/img-6.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Private Adventures</a>
-                                </div>
-                            </div>
-                            <div class="wpo-service-item">
-                                <div class="wpo-service-img">
-                                    <a href="#"><img src="assets/images/service/img-7.jpg" alt=""></a>
-                                </div>
-                                <div class="wpo-service-text">
-                                    <a href="#">Self-Guided Adventures</a>
-                                </div>
-                            </div>
+                <div class="room-wrap room-active owl-carousel">
+                    <div class="room-item">
+                        <div class="room-img">
+                            <img src="assets/images/room/1.jpg" alt="">
+                        </div>
+                        <div class="room-content">
+                            <h2><a href="room.html">Deluxe Contrast Room</a></h2>
+                            <ul>
+                                <li><i class="fi flaticon-expand-arrows"></i>52 sqm</li>
+                                <li><i class="fi flaticon-bed"></i>2 Bed</li>
+                                <li><i class="fi flaticon-bathtub"></i>1 Bathroom</li>
+                            </ul>
+                            <h3>$200 <span>/ Night</span></h3>
+                        </div>
+                    </div>
+                    <div class="room-item">
+                        <div class="room-img">
+                            <img src="assets/images/room/2.jpg" alt="">
+                        </div>
+                        <div class="room-content">
+                            <h2><a href="room.html">Luxery Twin Room</a></h2>
+                            <ul>
+                                <li><i class="fi flaticon-expand-arrows"></i>52 sqm</li>
+                                <li><i class="fi flaticon-bed"></i>2 Bed</li>
+                                <li><i class="fi flaticon-bathtub"></i>1 Bathroom</li>
+                            </ul>
+                            <h3>$250 <span>/ Night</span></h3>
+                        </div>
+                    </div>
+                    <div class="room-item">
+                        <div class="room-img">
+                            <img src="assets/images/room/3.jpg" alt="">
+                        </div>
+                        <div class="room-content">
+                            <h2><a href="room.html">Single Contrast Room</a></h2>
+                            <ul>
+                                <li><i class="fi flaticon-expand-arrows"></i>52 sqm</li>
+                                <li><i class="fi flaticon-bed"></i>2 Bed</li>
+                                <li><i class="fi flaticon-bathtub"></i>1 Bathroom</li>
+                            </ul>
+                            <h3>$280 <span>/ Night</span></h3>
+                        </div>
+                    </div>
+                    <div class="room-item">
+                        <div class="room-img">
+                            <img src="assets/images/room/4.jpg" alt="">
+                        </div>
+                        <div class="room-content">
+                            <h2><a href="room.html">Deluxe Contrast Room</a></h2>
+                            <ul>
+                                <li><i class="fi flaticon-expand-arrows"></i>52 sqm</li>
+                                <li><i class="fi flaticon-bed"></i>2 Bed</li>
+                                <li><i class="fi flaticon-bathtub"></i>1 Bathroom</li>
+                            </ul>
+                            <h3>$200 <span>/ Night</span></h3>
+                        </div>
+                    </div>
+                    <div class="room-item">
+                        <div class="room-img">
+                            <img src="assets/images/room/5.jpg" alt="">
+                        </div>
+                        <div class="room-content">
+                            <h2><a href="room.html">Luxery Twin Room</a></h2>
+                            <ul>
+                                <li><i class="fi flaticon-expand-arrows"></i>52 sqm</li>
+                                <li><i class="fi flaticon-bed"></i>2 Bed</li>
+                                <li><i class="fi flaticon-bathtub"></i>1 Bathroom</li>
+                            </ul>
+                            <h3>$250 <span>/ Night</span></h3>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- .room-area-start -->
+
+
     </div>
 
     <section class="wpo-about-section-s2 mt-5 section-padding">
